tests/errors/TwoPublics.java
public class TwoPublics {
    public static void main(String[] args) {
        new TwoPublics().go();
    }
    void go() {
    }
}
    
public aspect A {}
public aspect B {}
